<!--
  ~ ApliKTest11
  ~ Copyright (C) 2021 Miguel Molina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">ApliKTest11</string>
    <string name="textShortDesc">Application with Kit of questions and knowledge Test for the preparation of the Prueba Saber</string>
    <string name="textUsername">Username</string>
    <string name="textHintUsername">Your user</string>
    <string name="textPassword">Password</string>
    <string name="textHintPassword">Your password</string>
    <string name="btnTextInicioSesion">SIGN IN</string>
    <string name="textHintNombreOculto">Name</string>
    <string name="textHintApellidoOculto">Surname</string>
    <string name="textHintCorreoOculto">Email address</string>
    <string name="btnTextCrearUsuario">SIGN UP</string>
    <string name="textInicioSesion_DialogoTitle">Create your session</string>
    <string name="textInicioSesion_DialogoMessage">¿Do you want to register?</string>
    <string name="textInicioSesion_OpcPositiva">Yes</string>
    <string name="textInicioSesion_OpcNegativa">No</string>
    <string name="textCrearUsuario_Adicion">User %1$s added</string>
    <string name="textCrearUsuario_ClaveDebil">The password is weak</string>
    <string name="textCrearUsuario_Existe">The user %1$s is already registered</string>
    <string name="textValidarClave_PwdIncorrecto">The password must have at least 8 digits, a capital letter and a special character</string>
    <string name="textBienvenida">Welcome</string>
    <string name="textNombreUsuario">Student</string>
    <string name="textMostrarBienvenida">Welcome %1$s</string>
    <string name="textBienvenidaIntro">Prepare yours academic competences</string>
    <string name="textBienvenidaDescp">Design, solve and verify various knowledge tests</string>
    <string name="textInicioDescp">Choose an option with a touch in the menu bar</string>
    <string name="textOpcionesFragment_CrearPregunta">Question Bank</string>
    <string name="textOpcionesFragment_RealizarTest">Make Test</string>
    <string name="textOpcionesFragment_VerificarTest">Check Test</string>
    <string name="textBienvenidaNav_Logout">Closing session</string>
    <string name="textBienvenidaNav_Licencia" formatted="false">
    Copyright \u00A9 2021 Miguel Molina\n\n
    Consult the GNU General Public License\n
    version 3 for more details.\n
    See <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>.
    </string>
    <string name="textBienvenidanav_AcercaDe" formatted="false">
    Version %1$s\n
    Compilation date %2$s
    </string>
    <string name="textMenuNav_Licencia">License</string>
    <string name="textMenuNav_AcercaDe">About</string>
    <string name="textMenuNav_Logout">Logout</string>
    <string name="strFragmentPreguntas_Autor">Author</string>
    <string name="textInicioSesion_CampoVacio">Fields cannot be empty</string>
    <string name="textCrearUsuario_UsuarioDebil">Username too long and/or with white spaces</string>
    <string name="textCrearUsuario_CorreoIncorrecto">Invalid email address</string>
    <string name="textMenuNav_InfoSesion">Session info</string>
    <string name="textBienvenidaNav_InfoSesion" formatted="false">
    Name: %1$s %2$s\n
    Email: %3$s
    </string>
    <string name="textBienvenidaNav_InfoSesionTitle">Session %1$s</string>
    <!-- PreguntasDB -->
    <string name="txtNuevaPreguntaAsignatura">Topic of question</string>
    <string name="txtradioAsigCNAT">Science</string>
    <string name="txtradioAsigLENG">Language</string>
    <string name="txtradioAsigMAT">Mathematics</string>
    <string name="txtradioAsigSOC">Socials</string>
    <string name="txtNuevaPreguntaEnunciado">Statement of the question</string>
    <string name="txteditNuevaPreguntaEnunciado">Write question</string>
    <string name="txtNuevaPreguntaOpciones">Question Options</string>
    <string name="txteditNuevaPreguntaOpcionA">Write option A</string>
    <string name="txteditNuevaPreguntaOpcionB">Write option B</string>
    <string name="txteditNuevaPreguntaOpcionC">Write option C</string>
    <string name="txteditNuevaPreguntaOpcionD">Write option D</string>
    <string name="txtNuevaPreguntaRespuesta">Choose the correct question option</string>
    <string name="btntxtNuevaPreguntaAgregar">Save question</string>
    <string name="txtbtnNuevaPreguntaAdicionada">The question was saved</string>
    <string name="btnFABECrearPregunta">Create question</string>
    <string name="txtDetallePreguntaAsignatura">Topic of question</string>
    <string name="txtDetallePreguntaEnunciado">Statement of the question</string>
    <string name="txtDetallePreguntaOpciones">Options of the question</string>
    <string name="txtDetallePreguntaTituloOpciones">Question options</string>
    <string name="txtDetallePreguntaOpcItemA">Option A</string>
    <string name="txtDetallePreguntaOpcItemB">Option B</string>
    <string name="txtDetallePreguntaOpcItemC">Option C</string>
    <string name="txtDetallePreguntaOpcItemD">Option D</string>
    <string name="txtDetallePreguntaAutor">Author</string>
    <string name="txtbtnNuevaPreguntaActualizada">The question was updated</string>
    <string name="txtDetallePreguntaDiagTit">Question delete</string>
    <string name="txtDetallePreguntaDiagMsj">Confirm delete question</string>
    <string name="txtDetallePreguntaDiagPos">DELETE</string>
    <string name="txtDetallePreguntaDiagNeg">CANCEL</string>
    <string name="txtDetallePreguntaEliminada">The question was eliminated</string>
</resources>