<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ApliKTest11
  ~ Copyright (C) 2021 Miguel Molina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_Opciones"
        android:icon="@drawable/list_three_items_with_dots"
        android:title="Opciones"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_Licencia"
        android:icon="@drawable/outline_task_24"
        android:title="@string/textMenuNav_Licencia"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_AcercaDe"
        android:icon="@drawable/outline_error_outline_24"
        android:title="@string/textMenuNav_AcercaDe"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_Logout"
        android:icon="@drawable/ic_lock_power_off"
        android:title="@string/textMenuNav_Logout"
        app:showAsAction="never|withText"/>
</menu>