<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ApliKTest11
  ~ Copyright (C) 2021 Miguel Molina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetallePregunta">

    <!-- Barra de herramientas -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MenuBarDetallesPregunta"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="#800A5B"
        android:elevation="6dp"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>
    <!-- Detalles de la pregunta -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <!-- Asignatura pregunta -->
        <TextView
            android:id="@+id/setDetallePreguntaAsignatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txtDetallePreguntaAsignatura"
            android:textStyle="bold">
        </TextView>
        <!-- Imagen asignatura -->
        <ImageView
            android:id="@+id/imgDetallePreguntaAsignatura"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher">
        </ImageView>
        <!-- Enunciado pregunta -->
        <TextView
            android:id="@+id/setDetallePreguntaEnunciado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txtDetallePreguntaEnunciado">
        </TextView>
        <!-- Opciones de la pregunta -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/txtDetallePreguntaTituloOpciones"
            android:textAlignment="center"
            android:textStyle="italic|bold">
        </TextView>
        <!-- Opcion A -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Item A"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/setDetallePreguntaOpcItemA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtDetallePreguntaOpcItemA">
            </TextView>
        </LinearLayout>
        <!-- Opcion B -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Item B"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/setDetallePreguntaOpcItemB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtDetallePreguntaOpcItemB">
            </TextView>
        </LinearLayout>
        <!-- Opcion C -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Item C"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/setDetallePreguntaOpcItemC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtDetallePreguntaOpcItemB">
            </TextView>
        </LinearLayout>
        <!-- Opcion D -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Item D"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/setDetallePreguntaOpcItemD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/txtDetallePreguntaOpcItemD">
            </TextView>
        </LinearLayout>
        <!-- Autor de la pregunta -->
        <TextView
            android:id="@+id/setDetallePreguntaAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txtDetallePreguntaAutor"
            android:textAlignment="textEnd"
            android:textStyle="italic">
        </TextView>
    </LinearLayout>

</LinearLayout>