<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ApliKTest11
  ~ Copyright (C) 2021 Miguel Molina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Bienvenida">
    <!-- Barra de herramientas -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MenuBarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="#800A5B"
        android:elevation="6dp"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>
    <!-- Bienvenida usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/imgUserFemale"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="4dp"
            android:elevation="8dp"
            android:src="@drawable/avatar_female"
            android:foreground="@drawable/stroke_drawable"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBienvenida"
                android:textSize="25sp"
                android:textColor="@color/purple_700"
                android:textStyle="italic"
                android:fontFamily="@font/acme_regular"/>
            <TextView
                android:id="@+id/textNombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textNombreUsuario"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/acme_regular"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/imgUserMale"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:padding="4dp"
            android:elevation="8dp"
            android:src="@drawable/avatar_male"
            android:foreground="@drawable/stroke_drawable"/>
    </LinearLayout>
    <!-- Panel descripcion -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBienvenidaIntro"
                android:textSize="25sp"
                android:textStyle="italic"
                android:textColor="@color/purple_700"
                android:fontFamily="@font/acme_regular">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textBienvenidaDescp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/acme_regular">
            </TextView>
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:src="@mipmap/icon_ias">
        </ImageView>
    </LinearLayout>
    <!-- Panel inicio -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/textInicioDescp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/acme_regular">
            </TextView>
        </LinearLayout>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center"
            android:src="@drawable/options_finger">
        </ImageView>
    </LinearLayout>
</LinearLayout>