<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ApliKTest11
  ~ Copyright (C) 2021 Miguel Molina
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">
    <!-- Crear Pregunta -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="#4ABAC7ED">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/textOpcionesFragment_CrearPregunta"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/acme_regular">
        </TextView>
        <Button
            android:id="@+id/btnOpcionesFragment_CrearPregunta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:drawableTop="@drawable/finger_rot_48"
            android:padding="10dp">
        </Button>
    </LinearLayout>
    <!-- Realizar Test -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="#4ABAC7ED">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/textOpcionesFragment_RealizarTest"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/acme_regular">
        </TextView>
        <Button
            android:id="@+id/btnOpcionesFragment_RealizarTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:drawableTop="@drawable/finger_rot_48"
            android:padding="10dp">
        </Button>
    </LinearLayout>
    <!-- Verificar Test -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="#4ABAC7ED">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            android:text="@string/textOpcionesFragment_VerificarTest"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/acme_regular">
        </TextView>
        <Button
            android:id="@+id/btnOpcionesFragment_VerificarTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="5dp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_login"
            android:drawableTop="@drawable/finger_rot_48"
            android:padding="10dp">
        </Button>
    </LinearLayout>
</LinearLayout>
